--- a/public/css/components-css/hero.css
+++ b/public/css/components-css/hero.css
@@ -1,3 +1,9 @@
+.hero {
+    min-height: calc(100vh - 80px); 
+    display: flex;
+    align-items: center;
+}
+
 .hero-container {
     position: relative;
     width: 100vw;
@@ -55,7 +61,6 @@
     text-transform: capitalize;
 }
 
-/* Tombol navigasi */
 .hero-prev, .hero-next {
     position: absolute;
     top: 50%;
